[package]
name = "molecule_parser"
version = "0.1.0"
authors = ["maix0 <maix522@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex= "1.3.5"
once_cell = "1.3.1"
serde = {version="1.0.104", optional = true , features=["derive"]}

